--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social-scraper-frontend",
   "version": "0.1.0",
+  "homepage": "https://gnartistic.github.io/social-scraper-frontend",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
